--- a/sources/index.html
+++ b/sources/index.html
@@ -7,48 +7,56 @@
 		<!--Задаем адаптивную ширину экрана-->
 		<meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-        <!--Подключаем font-awesome-->
+
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<!--Подключаем стили-->
+		<link rel="stylesheet" href="libs/jquery/jquery-ui/themes/base/jquery-ui.min.css">
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="libs/jquery/Datepicker/css/base/jquery-ui-1.9.2.custom.min.css">
+		<!-- <link rel="stylesheet" href="css/libs.min.css"> -->
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAgd4Z8YhFxHUCa9xIDBPpoWcZwjX1-vS4"></script>
 	</head>
 	<body>
 		<header>
-			<nav>
-				<div class="row">
-					<div class="col-2">
-						<a href="#" class="d-flex align-items-end">
-							<img src="img/logo.png" class="logo">
-						</a>
-					</div>
-					<div class="col d-flex flex-row-reverse">
-						<ul class="nav">
-						  <li>
-						    <a class="nav-link d-flex align-items-center" href="#">Home</a>
-						  </li>
-						  <li>
-						    <a class="nav-link d-flex align-items-center" href="#">Destination</a>
-						  </li>
-						  <li>
-						    <a class="nav-link d-flex align-items-center" href="#">Ittinary</a>
-						  </li>
-						  <li>
-						    <a class="nav-link d-flex align-items-center" href="#">Review</a>
-						  </li>
-						   <li>
-						    <a class="nav-link d-flex align-items-center" href="#">Contact</a>
-						  </li>
-						</ul>
-					</div>
-					<div class=" d-flex align-items-begin">
-						<a href="#" class="user_menu">
-							<img src="img/user_face.png" class="user_face">
-							<img src="img/down.png" class="arrow">
-						</a>
-					</div>
+			<div class="row header_nav">
+				<div class="col-2 d-flex align-items-begin">
+					<a href="#">
+						<img src="img/logo.png" class="logo">
+					</a>
 				</div>
-			</nav>	
+				<div class="col d-flex flex-row-reverse p_0">
+					<nav class="navbar navbar-expand-lg d-flex flex-row-reverse">
+						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+							<span class="navbar-toggler-icon"></span>
+						</button>
+
+						<div class="collapse navbar-collapse" id="navbarSupportedContent">
+							<ul class="navbar-nav mr-auto">
+								<li class="nav-item">
+									<a class="nav-link d-flex align-items-center" href="#home">Home</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link d-flex align-items-center" href="#destination">Destination</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link d-flex align-items-center" href="#ittinary">Ittinary</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link d-flex align-items-center" href="#review">Review</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link d-flex align-items-center" href="#contact">Contact</a>
+								</li>
+							</ul>
+						</div>
+					</nav>
+				</div>
+				<div class=" d-flex align-items-begin" style="display:none">
+					<a href="#" class="user_menu" style="display:none">
+						<img src="img/user_face.png" class="user_face">
+						<img src="img/down.png" class="arrow">
+					</a>
+				</div>
+			</div>
 			<div class="header">
 				<div class="header_text text_scroll">
 					<p class="header__title ">LETS GET <span>LOST</span></p>
@@ -63,7 +71,7 @@
 			</div>
 		</header>
 		<main>
-			<div class="row d-flex block1">
+			<div id="home"  class="row d-flex block1">
 				<div class="col-6 p-2 block__image">
 					<img src="img/house.png">
 				</div>
@@ -76,7 +84,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="block2">
+			<div id="destination"  class="block2">
 				<div class="row d-flex">
 					<div  class="col-8 block__article">
 						<div class="article_title">
@@ -93,94 +101,97 @@
 					</div>
 				</div>
 				<div class="row d-flex justify-content-between block_in">
-					<div class="col-2">
-						<input type="search" placeholder="&#xf002; search dectination" class="fa search">
+					<div class="input_search">
+						<i class="fa fa-search" aria-hidden="true"></i>
+						<input type="search" placeholder="search dectination">
 					</div>
-					<div class="col-5 d-flex justify-content-end toplink">
-						<a href="#"><span>ALL PLACES&nbsp&nbsp/</span></a>
+					<div class="col-5 d-flex justify-content-end">
+						<a href="#"><span class="toplink">ALL PLACES&nbsp&nbsp/</span></a>
 						<a href="#">&nbsp&nbspRECOMMENDED PLACES</a>
 					</div>
 				</div>
-				<div class="row d-flex block_in">
-					<div class="col-6 block__image_closeup arr1">
-						<img src="img/paratrooper.png">
-						<a href="#" class="see_more d-flex justify-content-end">see more &#8594;</a>
-					</div>
-					<div class="col-6 block_in__2">
-						<div class="row">
-							<img src="img/ferris_wheel.png">
+				<div class="p_1">
+					<div class="row d-flex block_in">
+						<div class="col-6 block__image_closeup arr1">
+							<img src="img/paratrooper.png">
+							<a href="#" class="see_more d-flex justify-content-end">see more &#8594;</a>
 						</div>
-						<div class="row block__article">
-							<div class="article_title_min">
-								<p><span>Batu</span></p>
+						<div class="col-6 block_in__2">
+							<div class="row">
+								<img src="img/ferris_wheel.png">
 							</div>
-							<div class="article_text">
-								<p>is a city located in East Java Province of Indonesia. It is situated about 20 km to the northwest of Malang. Formerly, it was a part of Malang Regency; but in 2001, Batu became an independent city. A population of 190,000 people, it lies on the southern slopes of Gunung Welirang. Its population largely consists of Javanese.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row d-flex block_in">
-					<div class="col-3 block_in__2">
-						<div class="row">
-							<img src="img/bromo_hill.png">
-						</div>
-						<div class="row block__article">
-							<div class="article_title_min">
-								<p><span>Bromo</span></p>
-							</div>
-							<div class="article_text">
-								<p class="pad_right"><span>Mount Bromo</span> is an active volcano and part of the Tengger massif, in East Java, Indonesia. At 2,329 metres (7,641 ft) it is not the highest peak of the massif, but is the most well known.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-4 block__image_closeup arr2">
-						<div id="places" class="carousel slide" data-ride="carousel">
-							<div class="carousel-inner">
-								<div class="carousel-item active">
-									<img src="img/bromo1.png" alt="Batu">
+							<div class="row block__article">
+								<div class="article_title_min">
+									<p><span>Batu</span></p>
 								</div>
-								<div class="carousel-item">
-									<img src="img/bromo2.png" alt="Batu">
+								<div class="article_text">
+									<p>is a city located in East Java Province of Indonesia. It is situated about 20 km to the northwest of Malang. Formerly, it was a part of Malang Regency; but in 2001, Batu became an independent city. A population of 190,000 people, it lies on the southern slopes of Gunung Welirang. Its population largely consists of Javanese.</p>
 								</div>
 							</div>
+						</div>
+					</div>
+					<div class="row d-flex block_in">
+						<div class="col-3 block_in__2">
+							<div class="row">
+								<img src="img/bromo_hill.png">
+							</div>
+							<div class="row block__article">
+								<div class="article_title_min">
+									<p><span>Bromo</span></p>
+								</div>
+								<div class="article_text">
+									<p class="pad_right"><span>Mount Bromo</span> is an active volcano and part of the Tengger massif, in East Java, Indonesia. At 2,329 metres (7,641 ft) it is not the highest peak of the massif, but is the most well known.</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-4 block__image_closeup arr2">
+							<div id="places" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner">
+									<div class="carousel-item active">
+										<img src="img/bromo1.png" alt="Batu">
+									</div>
+									<div class="carousel-item">
+										<img src="img/bromo2.png" alt="Batu">
+									</div>
+								</div>
+								<a href="#" class="see_more d-flex justify-content-end">see more &#8594;</a>
+							</div>
+						</div>
+						<div class="col-5 block__image_closeup">
+							<img src="img/boat.png" class="pad_left">
 							<a href="#" class="see_more d-flex justify-content-end">see more &#8594;</a>
 						</div>
 					</div>
-					<div class="col-5 block__image_closeup">
-						<img src="img/boat.png" class="pad_left">
-						<a href="#" class="see_more d-flex justify-content-end">see more &#8594;</a>
+					<div class="row d-flex justify-content-center block_in">
+						<nav aria-label="Page navigation example">
+							<ul class="pagination">
+								<li class="page-item">
+									<a class="page-link d-flex align-items-center" href="#" aria-label="Previous">
+								    	<span aria-hidden="true">&laquo;</span>
+								    	<span class="sr-only">Previous</span>
+								    </a>
+								</li>
+								<li class="page-item active">
+									<a class="page-link d-flex align-items-center" href="#">1</a>
+								</li>
+								<li class="page-item">
+									<a class="page-link d-flex align-items-center" href="#">2</a>
+								</li>
+								<li class="page-item">
+									<a class="page-link d-flex align-items-center" href="#">3</a>
+								</li>
+								<li class="page-item">
+									<a class="page-link d-flex align-items-center" href="#" aria-label="Next">
+								    	<span aria-hidden="true">&raquo;</span>
+								    	<span class="sr-only">Next</span>
+								    </a>
+								</li>
+							</ul>
+						</nav>
 					</div>
 				</div>
-				<div class="row d-flex justify-content-center block_in">
-					<nav aria-label="Page navigation example">
-						<ul class="pagination">
-							<li class="page-item">
-								<a class="page-link d-flex align-items-center" href="#" aria-label="Previous">
-							    	<span aria-hidden="true">&laquo;</span>
-							    	<span class="sr-only">Previous</span>
-							    </a>
-							</li>
-							<li class="page-item active">
-								<a class="page-link d-flex align-items-center" href="#">1</a>
-							</li>
-							<li class="page-item">
-								<a class="page-link d-flex align-items-center" href="#">2</a>
-							</li>
-							<li class="page-item">
-								<a class="page-link d-flex align-items-center" href="#">3</a>
-							</li>
-							<li class="page-item">
-								<a class="page-link d-flex align-items-center" href="#" aria-label="Next">
-							    	<span aria-hidden="true">&raquo;</span>
-							    	<span class="sr-only">Next</span>
-							    </a>
-							</li>
-						</ul>
-					</nav>
-				</div>
 			</div>
-			<div class="block1">
+			<div id="ittinary" class="block1">
 				<div class="header_text">
 					<p class="article_title">Set <span>Itinerary</span></p>
 					<div class="header__text">
@@ -189,7 +200,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="block3">
+			<div id="review" class="block3">
 				<div class="block_in d-flex">
 					<div class="col-7 p_0">
 						<div class="bg_head_tb d-flex justify-content-center align-items-center">
@@ -199,51 +210,171 @@
 							<div class="tb_item">
 								<div class="row d-flex justify-content-between">
 									<p>Day 1</p>
-									<input type="text" class="tb_item" id="date" name="date" placeholder="Choose a data" required>
+									<input type="text" class="tb_item" id="date1" name="date1" placeholder="Choose a data" required>
 								</div>
 								<div class="row">
-									<div class="drag d-flex justify-content-center">
-										<h8>Drag destination here</h8>
+									<div id="droppable1"> 
+										<div class="drag text-center">
+										</div>
 									</div>
 								</div>
 							</div>
 							<div class="tb_item">
 								<div class="row d-flex justify-content-between">
 									<p>Day 2</p>
-									<input type="text" class="tb_item" id="date2" name="date" placeholder="Choose a data" required>
+									<input type="text" class="tb_item" id="date2" name="date2" placeholder="Choose a data" required>
 								</div>
 								<div class="row">
-									<div id="draggable" class="drag d-flex justify-content-center">
-										<h8>Drag destination here</h8>
+									<div id="droppable2"> 
+										<div class="drag text-center">
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
+						<div class="button_tb">
+							<a href="#" class="button_green" role="button"><i class="fa fa-save"></i>SAVE AS PDF</a>
+							<a href="#" class="button_print" role="button"><i class="fa fa-print"></i>PRINT</a>
+						</div>
 					</div>
-					<div class="col-5" >
-						<div class="row head_destin d-flex align-items-center justify-content-center">
+					<div class="col-5 p_1" >
+						<div class="head_destin d-flex align-items-center justify-content-center">
 							<h5>List of destinations</h5>
 						</div>
-						<div class="row">
-							<p>filter:</p>
-							<div class="dropdown show">
-								<a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Выпадающая ссылка</a>
+						<div class="body_destin">
+							<div class="d-flex">
+								<p>filter:</p>
+								<div class="dropdown show">
+									<button class="btn btn-secondary dropdown-toggle" href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									<span class="js-destination-filter-btn-label">All</span>
+									</button>
 
-								<div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-									<a class="dropdown-item" href="#">Action</a>
-									<a class="dropdown-item" href="#">Another action</a>
-									<a class="dropdown-item" href="#">Something else here</a>
+									<ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+										<li>
+											<a class="dropdown-item" data-category href="#">All</a>
+										</li>
+										<li>
+											<a class="dropdown-item" data-category="Mountain" href="#">Mountain</a>
+										</li>
+										<li>
+											<a class="dropdown-item" data-category="City" href="#">City</a>
+										</li>
+									</ul>
+								</div>
+							</div>
+							<div id="droppable">
+								<div class="draggable destination ui-widget-content" data-category="Mountain">
+									<div class="row">
+										<div class="col-6">
+											<div>
+												<h4>Mt.Bromo</h4>
+											</div>
+											<div>
+												<p>estimated time:<span> 4 Hours</span></p>
+											</div>
+										</div>
+										<div class="col-6 d-flex justify-content-end">
+											<div>
+												<img src="img/bromo_hill.png">
+												<p><span>view details</span></p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="draggable destination ui-widget-content" data-category="Mountain">
+									<div class="row">
+										<div class="col-6">
+											<div>
+												<h4>Mt.Semeru</h4>
+											</div>
+											<div>
+												<p>estimated time:<span> 4 Hours</span></p>
+											</div>
+										</div>
+										<div class="col-6 d-flex justify-content-end">
+											<div>
+												<img src="img/bromo_hill.png">
+												<p><span>view details</span></p>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="draggable destination ui-widget-content" data-category="City">
+									<div class="row">
+										<div class="col-6">
+											<div>
+												<h4>Batu</h4>
+											</div>
+											<div>
+												<p>estimated time:<span> 3 Hours</span></p>
+											</div>
+										</div>
+										<div class="col-6 d-flex justify-content-end">
+											<div>
+												<img src="img/bromo_hill.png">
+												<p><span>view details</span></p>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<div id="map" class="map_sapce"></div>
+			<div class="map">
+				<div class="map_content">
+					<div class="header_text">
+						<p class="header__title">Contact</p>
+					</div>
+					<div class="map_contact d-flex justify-content-between">
+						<div class="col-5 map_tb">
+							<form action="#" method="post">
+								<input type="email" placeholder="Your Email" class="form-control">
+								<input type="text" placeholder="Company" class="form-control">
+								<input type="text" placeholder="Subject" class="form-control">
+								<textarea rows="5" cols="30" placeholder="Your message" name="text"  class="form-control"></textarea>
+								<button type="submit" class="button_green">SEND MESSAGE
+                            	</button>
+							</form>
+						</div>
+						<div class="col-2 map_or d-flex justify-content-center align-items-center">
+							<p>OR</p>
+						</div>
+						<div class="col-5 map_info d-flex flex-column">
+							<p><span>You Can Find Us Here</span></p>
+							<p><i class="fa fa-home"></i>Jl.Danau Bratan sekian nomer sekian, Sawojajar Malang</p>
+							<a href="tel:+38(050)5369543"><i class="fa fa-user"></i>(+62) 8816723812</a>
+							<a href="tel:00628816723812"><i class="fa fa-user"></i>(+62) 8512371632</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="block4 d-flex">
+				<div class="col-6 p_0 subscribe_logo">
+					<div class="subscribe_title">Keep in Touch</div>
+					<div class="subscribe_text">We Will Give you latest information about Malang</div>
+				</div>
+				<div class="col-6 p_0 subscribe_input d-flex justify-content-end">
+					<input type="text" placeholder="Type email here for subscribe" class="form-control">
+					<button type="button"><i class="fa fa-angle-right"></i></button>
+				</div>
+			</div>
 		</main>
 		<footer>
-	
+			<div class="block5">
+				<ul class="d-flex p_0">
+					<li><a href="#">Term & Condition</a></li>
+					<li><a href="#">Policy</a></li>
+					<li><a href="#">Privacy</a></li>
+				</ul>			
+			</div>
+			<div class="d-flex justify-content-center align-items-end copyright">
+				copyright@YokMalang. All rights Reserved. 2015
+			</div>
 		</footer>
     	<script src="js/libs.min.js"></script>
-    	<script src="js/javascript.js"></script>
+		<script src="js/javascript.js"></script>
 	</body>
 </html>
